update rclone file

--- a/rclone.conf
+++ b/rclone.conf
@@ -1,4 +1,4 @@
-[MyS3Provider]
+[S3Provider]
 type = s3
 provider = Other
 env_auth = false
@@ -9,10 +9,10 @@ no_check_bucket = true
 
 [S3Backup]
 type = alias
-remote = MyS3Provider:directory/daily-backups
+remote = S3Provider:directory/daily-backups
  
-#  The  MyS3Provider  remote is the actual S3 remote that you want to use. The  S3Backup  remote is an alias to the  MyS3Provider  remote. 
+#  The  S3Provider  remote is the actual S3 remote that you want to use. The  S3Backup  remote is an alias to the  S3Provider  remote. 
 #  The  no_check_bucket  option is used to prevent rclone from checking if the bucket exists. This is useful when you want to use a bucket that is not in the root of the S3 account. 
 #  The  endpoint  option is used to specify the S3 endpoint URL. This is useful when you want to use a custom S3 provider. 
-#  The  remote  option in the  S3Backup  remote is set to  MyS3Provider:directory/name . This is the path to the bucket that you want to use. 
+#  The  remote  option in the  S3Backup  remote is set to  S3Provider:directory/name . This is the path to the bucket that you want to use. 
 #  You can now use the  S3Backup  remote to access the S3 bucket.
