--- a/rclone.conf
+++ b/rclone.conf
@@ -9,7 +9,7 @@ no_check_bucket = true
 
 [S3Backup]
 type = alias
-remote = MyS3Provider:directory/daily-backups
+remote = MyS3Provider:bucketname
  
 #  The  MyS3Provider  remote is the actual S3 remote that you want to use. The  S3Backup  remote is an alias to the  MyS3Provider  remote. 
 #  The  no_check_bucket  option is used to prevent rclone from checking if the bucket exists. This is useful when you want to use a bucket that is not in the root of the S3 account. 
